Fix spacing and add progress bar

--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -43,10 +43,35 @@
   padding-left: 60%;
 }
 
+.edit {
+  text-decoration: underline;
+}
+
 @media only screen and (min-width: 30em) {
   .button-right {
     padding-left: 70%;
   }
 
+
+}
+
+@media only screen and (min-width: 10em) {
+  .info-bar {
+    max-width: 15em;
+  }
+
+}
+
+@media only screen and (min-width: 20em) {
+  .info-bar {
+    max-width: 15em;
+  }
+
+}
+
+@media only screen and (min-width: 30em) {
+  .info-bar {
+    max-width: 30em;
+  }
 
 }
